--- a/index.html
+++ b/index.html
@@ -98,5 +98,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-beta.2/angular.min.js"></script>
     <script src="https://code.angularjs.org/1.5.0-beta.2/angular-route.min.js"></script>
     <script src="app.js"></script>
+    <script src="controllers/LoginController.js"></script>
+    <script src="controllers/MenuController.js"></script>
+    
 </body>
 </html>
